# papermerge-core

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  README.rst  alembic.ini  changelog.md  changelog.rst  compose-dev.yml  crowdin.yml  dev.yml  docker-compose.yml  no_config_pytest.ini  package-lock.json  pyproject.toml  pytest.ini  run-tests.sh  runtests.py  setup.cfg  setup.py  simplest.yml  sonar-project.properties  tox.ini
.github/: dependabot.yml
.github/workflows/: actions.yml  build-and-push-image.yml  build-arm64.yml  build-cloud-image.yml  build-dev-image.yml  build-docker-dev-image.yml  build-docker-image.yml  build-docker-images.yml  build-docker-prod-image-arm64.yml  build-docker-prod-image.yml  build-prod-image.yml  build-publish-image.yml  build-standard-image-arm64.yaml  build-standard-image.yml  build.yml  ci.yml  dependabot-auto-merge.yml  frontend-build.yml  frontend-tests.yml  openapi-schema-pr.yml  pep8.yml  publish-ghcr.yml  publish-to-dockerhub.yml  publish-to-ghcr.yml  publish-to-pypi.yml  publish.yml  pypi-publish.yml  python-publish.yml  tests.yml  ui-linting.yml  ui.yml  ui2.yml  update-openapi-schema.yml  version-bump.yml
changelog.d/: 1.changed.md  165.added.md  325.added.md  487.fixed.md  494.added.md  497.fixed.md  498.fixed.md  501.removed.md  502.fixed.md  508.fixed.md  509.fixed.md  514.fixed
docker/: Dockerfile.redoc  Dockerfile.swagger  README.md  backend-only.yml  backend.yml  db.yml  dev-docker-compose.yml  docker-compose-all.yml  docker-compose.yml  es.yml  nginx.conf  openapi-schema.yml  prod-backend-only.yml  prod-docker-compose.yml  redis.yml  restapidoc.dockerfile  schema.yml  services-es-kibana.yml  services-es.yml  services.yml  services2.yml
docker/__cloud__obsolete/: Dockerfile
docker/__cloud__obsolete/config/: asgi.py  urls.py
docker/__prod__obsolete/: Dockerfile
docker/app/dev/: Dockerfile  app.dockerfile
docker/app/prod/: Dockerfile  uwsgi.ini
docker/cloud/: Dockerfile  run.bash
docker/cloud/config/: celery.py  settings.py
docker/cloud/etc/: Caddyfile  logging.yaml  supervisord.conf
docker/dev/: .envrc  Dockerfile  Dockerfile.swagger  Dockerfile.ui  celerybeat-schedule.db  install_xapian.sh  logging.yaml  logging.yml  nginx.conf  papermerge.toml  run.bash  schema.yml  supervisord.conf  xapian_install.sh
docker/dev/config/: asgi.py  celery.py  settings.py  urls.py
docker/dev/scripts/: restore.sh  run.bash
docker/frontend/: Dockerfile  nginx.conf
docker/html/: index.html
docker/oidc/: .env  .env.example  Dockerfile  README.md  core.js.tmpl  docker-compose.yml  entrypoint.sh  init-db.sql  log_config.yaml  logging.yaml  supervisord.conf
docker/oidc/keycloak/: realm-export.json
docker/prod/: Dockerfile  README.md  logging.yaml  nginx.conf  papermerge.toml  run.bash  supervisord.conf  uwsgi.ini
docker/prod/config/: asgi.py  settings.py  urls.py
docker/prod/scripts/: backup.sh  create_token.sh  list_users.sh  run.bash
docker/restapidoc/config/: settings.py  urls.py
docker/restapidoc/html/: index.html
docker/standard/: Dockerfile  README.md  core.js.tmpl  docker-compose.yml  entrypoint.sh  log_config.yaml  nginx.conf  supervisord.conf
frontend/: .eslintrc.js  .gitignore  .prettierrc.json  .yarnrc.yml  README.md  eslint.config.mjs  package.json  tsconfig.4eslint.json  tsconfig.base.json  tsconfig.json
papermerge/: app.py  celery_app.py  cli.py  conftest.py
papermerge/__obsolete__delete_me_search/: apps.py  constants.py  search_indexes.py  signals.py  tasks.py  urls.py  views.py
papermerge/avenues/: apps.py  routing.py
papermerge/conf/: settings.py
papermerge/core/: __init__.py  app_settings.py  apps.py  auth.py  automate.py  backup_restore.py  checks.py  cli_loader.py  cloudfront.py  config.py  const.py  constants.py  dbapi.py  dynamic_preferences_registry.py  exceptions.py  import_pipeline.py  log.py  nodes_download.py  nodes_download_file.py  openapi.py  orm.py  page_operations.py  page_ops.py  pathlib.py  preferences.py  renderers.py  router_loader.py  schema.py  scopes.py  signal_definitions.py  signals.py  storage.py  task_monitor.py  tasks.py  types.py  urls.py  utils.py  version.py
papermerge/leds/: apps.py
papermerge/notifications/: apps.py  middleware.py  mixins.py  routing.py  signals.py
papermerge/search/: __init__.py  apps.py  constants.py  documents.py  exceptions.py  inputs.py  models.py  pages.py  query.py  schema.py  search_indexes.py  search_result.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
papermerge/storage/: __init__.py  base.py  exc.py
papermerge/test/: __init__.py  baker_recipes.py  decorators.py  maker.py  testcases.py  types.py  utils.py
papermerge/wfeedback/: apps.py  routing.py
requirements/: base.txt  test.txt
tests/: conftest.py  settings.py  test_settings.py  test_task_monitor.py  tests.py
tests/config/: base.py  manticoresearch_settings.py  search_settings.py  settings.py
tests/core/: conftest.py  test_backup_restore.py  test_nodes_download.py  test_nodes_download_file.py  test_notif.py  test_page_operations.py  test_page_ops.py  test_pathlib.py  test_redis_store.py  test_task_monitor.py  test_utils.py
tests/models/: test_document.py  test_folder.py
tests/notifications/: test_middleware.py
tests/resources/: backup-1.json  backup-with-tags.json
tests/search/: __test_search_view.py  test_page_search.py  test_query.py  test_search.py  test_search_view.py
tests/serializers/: test_folder.py  test_group.py  test_node.py
ui/: .gitignore  README.md  jest.config.ts  package-lock.json  package.json  tsconfig.json
ui/public/: index.html
ui/src/: App.tsx  cconstants.ts  ocr_langs.ts  runtime_config.ts  types.ts  utils.ts
ui/tests/: array.test.ts
ui2/: .gitignore  .prettierrc.json  README.md  index.html  package.json  papermerge-runtime-config.js  tsconfig.json  vite.config.ts
ui2/src/: App.css  App.tsx  Tags.tsx  Users.tsx  cconstants.ts  httpClient.ts  index.css  initializeI18n.ts  main.tsx  router.tsx  scopes.ts  store.ts  types.ts  utils.ts
(+2262 files in other folders)
