[project]
name = "papermerge"
version = "3.6.0"
description = "Open source document management system for digital archives"
authors = [
    { name = "Eugen Ciur", email = "eugen@papermerge.com" }
]
maintainers = [
    { name = "Eugen Ciur", email = "eugen@papermerge.com" }
]
license = "Apache-2.0"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
]
keywords = [
    "PDF",
    "metadata",
    "custom fields",
    "PDF/A",
    "scanning",
    "dms",
    "document-management",
    "paperless",
    "archives",
    "records"
]
requires-python = ">=3.13"
dependencies = [
    "redis",
    "celery[gevent,redis]",
    "pyyaml",
    "python-magic",
    "uritemplate",
    "pdf2image",
    "uvicorn",
    "python-jose",
    "img2pdf",
    "passlib",
    "sqlalchemy",
    "typer",
    "rich",
    "pytz",
    "pydantic-settings",
    "alembic",
    "fastapi[standard]",
    "taskipy",
    "asyncpg",
    "aiofiles",
    "psycopg2-binary",
]

[project.urls]
Homepage = "https://www.papermerge.com/"
Documentation = "https://docs.papermerge.io/"
Repository = "https://github.com/papermerge/papermerge-core"
Issues = "https://github.com/ciur/papermerge/issues"

[project.optional-dependencies]
aws_s3 = [
    "botocore",
    "boto3",
    "cryptography",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]


[project.scripts]
papermerge-cli = "papermerge.cli:main"
docs = "papermerge.core.cli.docs:app"
sign_url = "papermerge.core.cli.cf_sign_url:app"


[tool.taskipy.settings]
use_vars = true

[tool.taskipy.variables]
env_vars = "PAPERMERGE__MAIN__API_PREFIX=''"

[tool.taskipy.tasks]
test = { cmd = "{env_vars} pytest", cwd = "." }
worker = "celery -A config worker -c 5"
server = "fastapi dev papermerge/app.py"
migrate = "alembic upgrade head"

[tool.ruff]
target-version = "py311"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "F", # pyflakes
    "I001", # isort
    "UP", # pyupgrade
]
ignore = [
    "UP007"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["papermerge/core"]

[tool.pytest.ini_options]
testpaths = ["papermerge"]
asyncio_mode = "auto"
