[metadata]
name = papermerge-core
version = 2.0.0rc45
description = Open source document management system designed for scanned documents
long_description = file: README.rst
url = https://www.papermerge.com/
author = Eugen Ciur
author_email = eugen@papermerge.com
license = Apache 2.0 License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
